--- a/HelloDoc/Views/Admin_Dash/Admin_TableActive.cshtml
+++ b/HelloDoc/Views/Admin_Dash/Admin_TableActive.cshtml
@@ -1,4 +1,8 @@
-﻿@*
+﻿
+@*
+    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
+*@
+@*
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @* ---------------table---------------------------- *@
@@ -27,7 +31,7 @@
         @foreach (var item in Model)
         {
 
-            if (item.requesttypeid == 1 && item.status == 2)
+            if (item.requesttypeid == 1 && item.status == 4 || item.status == 5)
             {
                 @*   <tr style="background-color:#5FBC61 !important; color:white !important;"> *@
                 <tr class="table-success">
@@ -43,7 +47,7 @@
                     </td>
                     <td class="my-auto"> @item.BirthDate</td>
                     <td class="my-auto"><span>Patient </span>@item.Requestor</td>
-                   
+
                     <td class="my-auto">physician Name</td>
                     <td class="my-auto">Date Of Service</td>
                     <td class="my-auto ">
@@ -83,7 +87,7 @@
             }
 
 
-            else if (item.requesttypeid == 2 && item.status == 2)
+            else if (item.requesttypeid == 2 && item.status == 4 || item.status == 5)
             {
                 @*   <tr style="background-color:#5FBC61 !important; color:white !important;"> *@
                 <tr class="table-warning">
@@ -141,7 +145,7 @@
                     </td>
                 </tr>
             }
-            else if (item.requesttypeid == 3 && item.status == 2)
+            else if (item.requesttypeid == 3 && item.status == 4 || item.status == 5)
             {
                 @*   <tr style="background-color:#5FBC61 !important; color:white !important;"> *@
                 <tr class="table-info">
@@ -174,11 +178,11 @@
                     <td class="my-auto">@item.Address</td>
                     <td class="my-auto">@item.Notes</td>
                     <td class="my-auto">
-                        <button class="btn border rounded btn-info ">
+                        <button class="btn border rounded  btn-info ">
                             <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
                                 <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z" />
                             </svg>Patient
-                        </button>  <button class="btn border rounded btn-info ">
+                        </button>  <button class="btn border rounded  btn-info ">
                             <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
                                 <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z" />
                             </svg>Provider
@@ -201,7 +205,7 @@
                 </tr>
             }
 
-            else if (item.requesttypeid == 4 && item.status == 2)
+            else if (item.requesttypeid == 4 && item.status == 4 || item.status == 5)
             {
                 @*   <tr style="background-color:#5FBC61 !important; color:white !important;"> *@
                 <tr class="table-danger">
@@ -234,11 +238,11 @@
                     <td class="my-auto">@item.Address</td>
                     <td class="my-auto">@item.Notes</td>
                     <td class="my-auto">
-                        <button class="btn border rounded  btn-danger ">
+                        <button class="btn border rounded btn-danger ">
                             <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
                                 <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z" />
                             </svg>Patient
-                        </button>  <button class="btn border rounded  btn-danger ">
+                        </button>  <button class="btn border rounded btn-danger ">
                             <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
                                 <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z" />
                             </svg>Provider
