--- a/HelloDoc/Views/Admin_Dash/Admin_TableNew.cshtml
+++ b/HelloDoc/Views/Admin_Dash/Admin_TableNew.cshtml
@@ -1,21 +1,21 @@
-﻿@*
+﻿
+@*
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @* ---------------table---------------------------- *@
 
 
 <table class="table text-center table-responsive-lg">
-
-
-
+   
+    
+   
     <thead class="table-secondary">
         <tr class="fs-5">
             <th scope="col">Name</th>
             <th scope="col"></th>
             <th scope="col">Date of Birth</th>
             <th scope="col">requestor</th>
-            <th scope="col">Physician Name</th>
-            <th scope="col">Date Of Service</th>
+            <th scope="col">Requested Date</th>
             <th scope="col">Phone</th>
             <th scope="col">Address</th>
             <th scope="col">Notes</th>
@@ -27,7 +27,7 @@
         @foreach (var item in Model)
         {
 
-            if (item.requesttypeid == 1 && item.status == 2)
+            if (item.requesttypeid == 1 && item.status == 1)
             {
                 @*   <tr style="background-color:#5FBC61 !important; color:white !important;"> *@
                 <tr class="table-success">
@@ -43,9 +43,7 @@
                     </td>
                     <td class="my-auto"> @item.BirthDate</td>
                     <td class="my-auto"><span>Patient </span>@item.Requestor</td>
-                   
-                    <td class="my-auto">physician Name</td>
-                    <td class="my-auto">Date Of Service</td>
+                    <td class="my-auto">@item.RequestedDate</td>
                     <td class="my-auto ">
                         <button class="btn border border-2 border-dark rounded my-1 btn-success">
                             <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
@@ -57,10 +55,6 @@
                     <td class="my-auto">@item.Notes</td>
                     <td class="my-auto">
                         <button class="btn border rounded btn-success ">
-                            <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
-                                <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z" />
-                            </svg>Patient
-                        </button>  <button class="btn border rounded btn-success ">
                             <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
                                 <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z" />
                             </svg>Provider
@@ -83,7 +77,7 @@
             }
 
 
-            else if (item.requesttypeid == 2 && item.status == 2)
+            else if (item.requesttypeid == 2 && item.status == 1)
             {
                 @*   <tr style="background-color:#5FBC61 !important; color:white !important;"> *@
                 <tr class="table-warning">
@@ -99,8 +93,7 @@
                     </td>
                     <td class="my-auto"> @item.BirthDate</td>
                     <td class="my-auto"><span>Patient </span>@item.Requestor</td>
-                    <td class="my-auto">physician Name</td>
-                    <td class="my-auto">Date Of Service</td>
+                    <td class="my-auto">@item.RequestedDate</td>
                     <td class="my-auto ">
                         <button class="btn border border-2 border-dark rounded my-1 btn-warning">
                             <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
@@ -116,11 +109,7 @@
                     <td class="my-auto">@item.Address</td>
                     <td class="my-auto">@item.Notes</td>
                     <td class="my-auto">
-                        <button class="btn border rounded btn-warning ">
-                            <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
-                                <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z" />
-                            </svg>Patient
-                        </button>  <button class="btn border rounded btn-warning ">
+                        <button class="btn border rounded btn-warning  ">
                             <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
                                 <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z" />
                             </svg>Provider
@@ -141,7 +130,7 @@
                     </td>
                 </tr>
             }
-            else if (item.requesttypeid == 3 && item.status == 2)
+            else if (item.requesttypeid == 3 && item.status == 1)
             {
                 @*   <tr style="background-color:#5FBC61 !important; color:white !important;"> *@
                 <tr class="table-info">
@@ -157,8 +146,7 @@
                     </td>
                     <td class="my-auto"> @item.BirthDate</td>
                     <td class="my-auto"><span>Concierge </span>@item.Requestor</td>
-                    <td class="my-auto">physician Name</td>
-                    <td class="my-auto">Date Of Service</td>
+                    <td class="my-auto">@item.RequestedDate</td>
                     <td class="my-auto ">
                         <button class="btn border border-2 border-dark rounded my-1 btn-info">
                             <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
@@ -174,11 +162,7 @@
                     <td class="my-auto">@item.Address</td>
                     <td class="my-auto">@item.Notes</td>
                     <td class="my-auto">
-                        <button class="btn border rounded btn-info ">
-                            <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
-                                <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z" />
-                            </svg>Patient
-                        </button>  <button class="btn border rounded btn-info ">
+                        <button class="btn border rounded  btn-info">
                             <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
                                 <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z" />
                             </svg>Provider
@@ -201,7 +185,7 @@
                 </tr>
             }
 
-            else if (item.requesttypeid == 4 && item.status == 2)
+            else if (item.requesttypeid == 4 && item.status == 1)
             {
                 @*   <tr style="background-color:#5FBC61 !important; color:white !important;"> *@
                 <tr class="table-danger">
@@ -217,8 +201,7 @@
                     </td>
                     <td class="my-auto"> @item.BirthDate</td>
                     <td class="my-auto"><span>BusinessPartner </span>@item.Requestor</td>
-                    <td class="my-auto">physician Name</td>
-                    <td class="my-auto">Date Of Service</td>
+                    <td class="my-auto">@item.RequestedDate</td>
                     <td class="my-auto ">
                         <button class="btn border border-2 border-dark rounded my-1 btn-danger">
                             <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
@@ -234,11 +217,7 @@
                     <td class="my-auto">@item.Address</td>
                     <td class="my-auto">@item.Notes</td>
                     <td class="my-auto">
-                        <button class="btn border rounded  btn-danger ">
-                            <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
-                                <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z" />
-                            </svg>Patient
-                        </button>  <button class="btn border rounded  btn-danger ">
+                        <button class="btn border rounded btn-danger">
                             <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
                                 <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z" />
                             </svg>Provider
@@ -266,9 +245,9 @@
         }
 
     </tbody>
-
+    
 </table>
 
 
 
-@* ---------------table---------------------------- *@
+  @* ---------------table---------------------------- *@
