--- a/HelloDoc/Views/Admin_Dash/Admin_TableToClose.cshtml
+++ b/HelloDoc/Views/Admin_Dash/Admin_TableToClose.cshtml
@@ -1,6 +1,9 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
+@*
+    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
+*@
 @* ---------------table---------------------------- *@
 
 
@@ -13,10 +16,9 @@
             <th scope="col">Name</th>
             <th scope="col"></th>
             <th scope="col">Date of Birth</th>
-            <th scope="col">requestor</th>
+            <th scope="col">region</th>
             <th scope="col">Physician Name</th>
             <th scope="col">Date Of Service</th>
-            <th scope="col">Phone</th>
             <th scope="col">Address</th>
             <th scope="col">Notes</th>
             <th scope="col">Chatwith</th>
@@ -27,7 +29,7 @@
         @foreach (var item in Model)
         {
 
-            if (item.requesttypeid == 1 && item.status == 2)
+            if (item.requesttypeid == 1 && item.status == 3 || item.status == 7 || item.status == 8)
             {
                 @*   <tr style="background-color:#5FBC61 !important; color:white !important;"> *@
                 <tr class="table-success">
@@ -42,17 +44,10 @@
                         </button>
                     </td>
                     <td class="my-auto"> @item.BirthDate</td>
-                    <td class="my-auto"><span>Patient </span>@item.Requestor</td>
-                   
+                    <td class="my-auto">region</td>
+
                     <td class="my-auto">physician Name</td>
                     <td class="my-auto">Date Of Service</td>
-                    <td class="my-auto ">
-                        <button class="btn border border-2 border-dark rounded my-1 btn-success">
-                            <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z" />
-                            </svg>@item.PhoneNumber
-                        </button><br /><span>(Patient)</span>
-                    </td>
                     <td class="my-auto">@item.Address</td>
                     <td class="my-auto">@item.Notes</td>
                     <td class="my-auto">
@@ -83,7 +78,7 @@
             }
 
 
-            else if (item.requesttypeid == 2 && item.status == 2)
+            else if (item.requesttypeid == 2 && item.status == 3 || item.status == 7 || item.status == 8)
             {
                 @*   <tr style="background-color:#5FBC61 !important; color:white !important;"> *@
                 <tr class="table-warning">
@@ -98,21 +93,10 @@
                         </button>
                     </td>
                     <td class="my-auto"> @item.BirthDate</td>
-                    <td class="my-auto"><span>Patient </span>@item.Requestor</td>
+                    <td class="my-auto">region</td>
                     <td class="my-auto">physician Name</td>
                     <td class="my-auto">Date Of Service</td>
-                    <td class="my-auto ">
-                        <button class="btn border border-2 border-dark rounded my-1 btn-warning">
-                            <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z" />
-                            </svg>@item.PhoneNumber
-                        </button><br /><span>(Family/Friend) </span> <br />
-                        <button class="btn border border-2 border-dark rounded my-1 btn-warning">
-                            <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z" />
-                            </svg>@item.PhoneNumber_P
-                        </button><br /><span>(Patient) </span>
-                    </td>
+                  
                     <td class="my-auto">@item.Address</td>
                     <td class="my-auto">@item.Notes</td>
                     <td class="my-auto">
@@ -141,7 +125,7 @@
                     </td>
                 </tr>
             }
-            else if (item.requesttypeid == 3 && item.status == 2)
+            else if (item.requesttypeid == 3 && item.status == 3 || item.status == 7 || item.status == 8)
             {
                 @*   <tr style="background-color:#5FBC61 !important; color:white !important;"> *@
                 <tr class="table-info">
@@ -156,29 +140,18 @@
                         </button>
                     </td>
                     <td class="my-auto"> @item.BirthDate</td>
-                    <td class="my-auto"><span>Concierge </span>@item.Requestor</td>
+                    <td class="my-auto">region</td>
                     <td class="my-auto">physician Name</td>
                     <td class="my-auto">Date Of Service</td>
-                    <td class="my-auto ">
-                        <button class="btn border border-2 border-dark rounded my-1 btn-info">
-                            <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z" />
-                            </svg>@item.PhoneNumber
-                        </button><br /><span>(Concierge)</span> <br />
-                        <button class="btn border border-2 border-dark rounded my-1 btn-info">
-                            <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z" />
-                            </svg>@item.PhoneNumber_P
-                        </button><br /><span>(Patient)</span>
-                    </td>
+                   
                     <td class="my-auto">@item.Address</td>
                     <td class="my-auto">@item.Notes</td>
                     <td class="my-auto">
-                        <button class="btn border rounded btn-info ">
+                        <button class="btn border rounded  btn-info ">
                             <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
                                 <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z" />
                             </svg>Patient
-                        </button>  <button class="btn border rounded btn-info ">
+                        </button>  <button class="btn border rounded  btn-info ">
                             <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
                                 <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z" />
                             </svg>Provider
@@ -201,7 +174,7 @@
                 </tr>
             }
 
-            else if (item.requesttypeid == 4 && item.status == 2)
+            else if (item.requesttypeid == 4 && item.status == 3 || item.status == 7 || item.status == 8)
             {
                 @*   <tr style="background-color:#5FBC61 !important; color:white !important;"> *@
                 <tr class="table-danger">
@@ -216,7 +189,7 @@
                         </button>
                     </td>
                     <td class="my-auto"> @item.BirthDate</td>
-                    <td class="my-auto"><span>BusinessPartner </span>@item.Requestor</td>
+                    <td class="my-auto">region</td>
                     <td class="my-auto">physician Name</td>
                     <td class="my-auto">Date Of Service</td>
                     <td class="my-auto ">
@@ -234,11 +207,11 @@
                     <td class="my-auto">@item.Address</td>
                     <td class="my-auto">@item.Notes</td>
                     <td class="my-auto">
-                        <button class="btn border rounded  btn-danger ">
+                        <button class="btn border rounded btn-danger ">
                             <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
                                 <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z" />
                             </svg>Patient
-                        </button>  <button class="btn border rounded  btn-danger ">
+                        </button>  <button class="btn border rounded btn-danger ">
                             <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
                                 <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z" />
                             </svg>Provider
